<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.MapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

<LinearLayout
    android:id="@+id/drawer_content"
    android:layout_width="280dp"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_gravity="left"
    android:background="#FFF"
    android:orientation="vertical" >
    	
   	<AutoCompleteTextView
       	android:id="@+id/map_place_search_field"
   		android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:hint="@string/search_field_hint_map" 
       	android:ems="10" >
   	</AutoCompleteTextView>
    
    <Space 
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>
    
    <TextView
    	android:id="@+id/places_label"
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFF"
    	android:textColor="#33B5E5"
    	android:text="@string/campus_label"
    	android:textSize="15sp" />
    
	<RadioGroup
	android:id="@+id/radio_group_campus"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/radio_karlskrona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campus_karlskrona"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_karlshamn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campus_karlshamn"
        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	
	<Space 
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>
	
	<TextView
    	android:id="@+id/controls_label"
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFF"
    	android:textColor="#33B5E5"
    	android:text="@string/view_label"
    	android:textSize="15sp" />
	
	<RadioGroup
	    android:id="@+id/radio_group_views"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<RadioButton android:id="@+id/radio_normal"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/view_normal"
        	android:onClick="onRadioButtonClicked"/>
    	<RadioButton android:id="@+id/radio_satellite"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/view_satellite"
        	android:onClick="onRadioButtonClicked"/>
    	<RadioButton android:id="@+id/radio_hybrid"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/view_hybrid"
        	android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	
	<Space 
        android:layout_width="fill_parent"
        android:layout_height="30dp"/>

	<TextView
    	android:id="@+id/markers_label"
    	style="?android:attr/listSeparatorTextViewStyle"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFF"
    	android:textColor="#33B5E5"
    	android:text="@string/markers_label"
    	android:textSize="15sp" />
	
	<LinearLayout 
	    android:id="@+id/markers_layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	
	    <LinearLayout
	    	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
    		
	            <ToggleButton
    				android:id="@+id/marker_toggle_houses"
				    android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
				    android:textOn="Houses"
					android:textOff="Houses"
    				android:onClick="onToggleClicked" />
	    </LinearLayout>
	</LinearLayout>	
</LinearLayout>
</android.support.v4.widget.DrawerLayout>