<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/innerRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true">
    		
	    <Button
	        android:id="@+id/addButton"
	        android:onClick="addCourse"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/add_button_text" />
	
	   	<EditText
	        android:id="@+id/courseCode"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/addButton"
	        android:hint="@string/search_field_hint_courses"
	        android:ems="10" >
	    </EditText>
	    
	  	<fragment
    		android:id="@+id/_container"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="?android:attr/actionBarSize"
        	class="com.example.app_android.ui.FragmentCourses" >
	   	</fragment>
	        
	   	<Button
       		android:id="@+id/scheduleButton"
       		android:onClick="startCalendar"
       		android:layout_alignParentBottom="true"
      		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:layout_centerHorizontal="true"
       		android:text="@string/schedule_button_text"/>

    </RelativeLayout>
